<resources>
    <string name="app_name">Verified</string>
    <string name="hashtag_together_we_can">#togetherWeCan</string>
    <string name="choose_your_requirement">Choose your requirement</string>
    <string name="select_your_state">Select your state</string>
    <string name="select_your_city">Select your city</string>
    <string name="search">Search</string>
    <string name="verify_contacts">Verify Contacts</string>
    <string name="community_needs_volunteer">Verified is a combined effort of our online community. Want to volunteer?</string>
    <string name="update_requirements">Update Requirements</string>
    <string name="search_requirement">Search Requirements</string>
    <string name="requirement_type">Requirement Type : </string>
    <string name="available_on">Available On</string>
    <string name="quantity">Quantity</string>
    <string name="last_updated_on">Last Updated On</string>
    <string name="showVerified">Show only verified contacts</string>
    <string name="have_verification_done">verified?</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="add_contact">Add Another Contact</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="your_bookmarks">Your Bookamrks</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="didnt_find">Did not find what you are looking for?</string>
    <string name="contact_us">Contact us</string>
    <string name="share_with_friends">Share us with friends</string>
    <string name="add_new_resources">Add New Resource</string>
    <string name="nope">Nope</string>
    <string name="correct">Correct</string>
    <string name="extra_notes">Extra Notes</string>
    <string name="reward_your_search">Try rewarding your search with different text</string>
    <string name="try_again_at_diff_location">Try again with different requirement/location</string>
    <string name="enter_extra_detail">Enter detail about the requirement</string>
    <string name="login">Log in</string>
    <string name="want_to_contribute">Want to contribute?</string>
    <string name="signin_error">There was a trouble signing in. Please try again</string>
    <string name="login_successful">Login successfully</string>
    <string name="login_failed">Login Failed</string>
    <string name="log_out">Log out</string>
    <string name="not_from">Not from</string>
    <string name="change_country">\? Click here to select your country</string>
    <string name="upload">Upload</string>
    <string name="update">Update</string>
    <string name="tap_on_link">Tap on the link to download</string>
    <string name="share_app_text">Hey! I have found this amazing app which helps you find necessary stuffs around you.</string>
    <string name="try_again">Try Again</string>
    <string name="spread_the_word">Spread the word</string>
    <string name="share">Share</string>
    <string name="welcome">Welcome</string>
    <string name="upload_details">Upload Details</string>
    <string name="update_details">Update Details</string>
    <string name="details">Details</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="invalid_landmark">Invalid Landmark</string>
    <string name="missing_requirement_type">Missing Requirement Type</string>
    <string name="invalid_extra_note">Invalid Extra Note</string>
    <string name="invalid_city">City is not selected</string>
    <string name="invalid_state">State in not selected</string>
    <string name="invalid_quantities">Quantity is invalid</string>
    <string name="missing_contacts">At least one contact needs to be entered</string>
    <string name="enter_online_address">Enter Online Address, if any</string>
    <string name="enter_address">Enter contact address</string>
    <string name="enter_person_name">Enter person name</string>
    <string name="click_to_change_country">Click here to change country</string>
    <string name="error_getting_data">Oops! We can not find what you are looking for. Try rewarding your search by more brief text</string>
    <string name="remove">Remove</string>
    <string name="mark_as_duplicate">Mark as duplicate</string>
    <string name="requirement_updated_successfully">Requirement updated successfully</string>
    <string name="error_updating_requirement">Error updating requirement</string>
</resources>